@@ -1,5 +1,6 @@
 Changes for 1.8.3
 
+ - [ZBX-2355] fixed error when try to massupdate trigger severity (Vedmak)
  - [ZBX-2354] updated Russian translation; thanks to dotneft (Richlv)
  - [ZBX-2352] fixed typo in the default locale (Richlv)
  - [ZBX-2312] fixed event order in "monitoring triggers" and "last 20 events" (Vedmak)
